Version 5.0.11 (next)
--------------

  fixes
   - Sequence events on their identity not globally (#6110)
   - Missing API message (#6105)
   - Default anonymous root API names (#6106, #6111)
   - Tracing of requests, calls, events (#6107)
   - Report unsupported bindings (#6115)
   - Long pause time on corrupted heap backtrace

Version 5.0.10
--------------

  fixes
   - Interlock of event (push -> unsubscribe) removed by copying on stack

  features
   - RPC v3 calls can tell the API name

Version 5.0.9
-------------

  features
   - calls and subcalls accept NULL callback (for later optimization)
   - automatic remove of sessions without cookie value

  minor/details
   - remove lang field in afb-session

Version 5.0.8
-------------

  features
   - Implement optionnal masking for websockets

  fixes
   - Dont close extension on exit
   - The event monitor/disconnected is now hookable

Version 5.0.7
-------------

  features
   - Allows pasing NULL to 'afb_session_cookie_get'
   - Optimize dynamic verb allocation and search
   - Implement afb_api_unshare_session for bindings >= 4.1.4
   - Allow extensions to add websocket protocol
   - Implement connection to websocket servers

  fixes
   - Check epoll_fd returned by libmicrohttpd
   - Forbids verbs of same name
   - Detect allocation error of verbs

Version 5.0.6
-------------

  fixes
   - unreferencing API for destroying it

Version 5.0.5
-------------

  fixes
   - data translation strinz -> json-c when NULL

Version 5.0.4
-------------

  fixes
   - interruption of call-sync

Version 5.0.3
-------------

  fixes
   - calling call-sync functions in timers
   - lock of event loop when posting jobs
   - length of abstract unix sockets

Version 5.0.2
-------------

  fixes
   - coherent callbacks for timers (now unsigned decount)

  minor/details
   - improved include order

Version 5.0.1
-------------

  features
   - implementation of afb_job_abort
   - added management of common session UUID